# kerminal

./: .gitignore  Makefile  docker-compose.yaml
backend/: Dockerfile  Makefile  pyproject.toml
backend/kerminal/api/routes/v1/: endpoints.py
backend/kerminal/cli/: main.py
backend/kerminal/core/: services.py
kerminal/: config.py
kerminal/api/: main.py
