[project]
name = "kerminal"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "fastapi~=0.104.1",
    "typer~=0.9.0",
    "uvicorn~=0.24.0",
    "pydantic-settings~=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest~=7.4.3",
    "ruff~=0.1.6",
]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W", "UP", "PL", "RUF"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.envs.default]
python = "3.11"

[tool.hatch.build.targets.wheel]
packages = ["src"]